--- a/index.html
+++ b/index.html
@@ -2633,7 +2633,7 @@
                                                                                                 data-field-id="0">
                                                                                                 <label
                                                                                                     class="wpforms-field-label wpforms-label-hide"
-                                                                                                    for="wpforms-512-field_0">Name</label>
+                                                                                                    for="wpforms-512-field_0">Namn</label>
                                                                                                 <input type="text"
                                                                                                     id="wpforms-512-field_0"
                                                                                                     class="wpforms-field-large"
@@ -2645,8 +2645,7 @@
                                                                                                 data-field-id="3">
                                                                                                 <label
                                                                                                     class="wpforms-field-label wpforms-label-hide"
-                                                                                                    for="wpforms-512-field_3">Your
-                                                                                                    Phone Number</label>
+                                                                                                    for="wpforms-512-field_3">Telefonnummer</label>
                                                                                                 <input type="text"
                                                                                                     id="wpforms-512-field_3"
                                                                                                     class="wpforms-field-large"
@@ -2659,7 +2658,7 @@
                                                                                                 <label
                                                                                                     class="wpforms-field-label wpforms-label-hide"
                                                                                                     for="wpforms-512-field_2">
-                                                                                                    Comment or Message
+                                                                                                    Kostpreferenser
                                                                                                     <span
                                                                                                         class="wpforms-required-label">*</span>
                                                                                                 </label>
